[package]
name = "cryengine-ui-helper"
authors = ["Alexander Tretyakov"]
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
platform-dirs = "0.3.0"
rdev = "0.5.1"
configparser = "3.0.2"
backtrace = "0.3.66"