[package]
name = "cryengine-ui-helper"
authors = ["Alexander Tretyakov"]
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
platform-dirs = "0.3.0"
rdev = "0.5.1"
configparser = "3.0.2"
backtrace = "0.3.66"
native-dialog = {version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"]}
quick-xml = "0.25.0"
wgpu = "0.13.1"
iced = {git = "https://github.com/iced-rs/iced", rev = "7420ea7a6b80663cad178c1238c5b756232a087f"}